Remove auth from parameter
